fix scrollerbar-x invisibile when width 1600px

--- a/source/css/_partial/main.styl
+++ b/source/css/_partial/main.styl
@@ -130,7 +130,7 @@
 	}
 }
 
-@media screen and (min-width:1600px) {
+@media screen and (min-width:1640px) {
 	#container {
 		width: 1600px;
 		margin: 0 auto;
